# wfc

./: pyproject.toml
src/wfc/: wfc.py
