[build-system]
requires = []
build-backend = "setuptools.build_meta"

[project]
name = "wfc"
version = "1.0.0"
description = "Basic wave function collapse implementation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sebastianjkern/wfc"
Issues = "https://github.com/sebastianjkern/wfc/issues"

[tool.setuptools.packages.find]
where = ["src"]